--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,18 @@
     package="co.tiagoaguiar.fitnesstracker">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessTracker">
-        <activity android:name=".ImcActivity"></activity>
+        <activity android:name=".TmbActivity"></activity>
+        <activity
+            android:name=".ListCalcActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".ImcActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
